fix .menuRight>li overflow error

--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ header nav li img.highlight {
 	background-size: cover;
 	height: auto;
 	padding: 15px 20px;
-    margin: 10px 0 0 0;
+	margin: 10px 0 0 0;
 }
 .menuRight ul {
     margin: 0;
@@ -262,7 +262,6 @@ header nav li img.highlight {
     width: 100%;
     margin-top: 0;
     padding-top: 0;
-    overflow: hidden;
 }
 .menuRight li a {
     color: rgb(0,220,0);
